--- a/android-app/res/values/strings.xml
+++ b/android-app/res/values/strings.xml
@@ -3,11 +3,12 @@
 
     <string name="app_name">Pagr</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">No INternet :'(</string>
-    <string name="firstname_lastname">James</string>
+    <string name="hello_world">No Internet :\'(</string>
+    <!--<string name="firstname_lastname">James</string>-->
 
     <!-- Guest Number Activity -->
-    <string name="user_greeting">Hello James!</string>
+    <string name="user_greeting">Hello %s</string>
+    <string name="user_greeting_guest">Hello Guest</string>
     <string name="number_of_guests_holdtext">Number of guests:</string>
     <string name="button_ok">OK</string>
 
@@ -22,7 +23,16 @@
     <string name="table_reservation_confirm_text">Ok, we\'ll buzz you when your table is ready :)</string>
     <string name="do_you_want_appetizer_hold_text">Do you want to take a look at our appetizer menu?</string>
     <string name="button_oh_yeah">Oh yeah!</string>
-
     <string name="appetizer_order_confirmation_dialog">We go your order of %s !</string>
+    <string name="button_submit_order">Submit Order</string>
+
+    <!-- Pagr Dialog -->
+    <string name="dialog_table_ready">Hooray! Your table is ready :)</string>
+    <string name="button_yay">Yay</string>
+    <string name="title_activity_submit_order">SubmitOrderActivity</string>
+    <string name="title_activity_settings">MainActivity</string>
+
+    <!-- Settings Activity -->
+    <string name="button_save">Save</string>
 
 </resources>
