--- a/android-app/PagrProject/Pagr/src/main/res/values/strings.xml
+++ b/android-app/PagrProject/Pagr/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello World!</string>
     <string name="no_internet">No Internet :\'(</string>
-    <!--<string name="firstname_lastname">James</string>-->
+    <!-- <string name="firstname_lastname">James</string> -->
+
 
     <!-- Guest Number Activity -->
     <string name="user_greeting">Hello %s</string>
@@ -25,6 +26,9 @@
     <string name="do_you_want_appetizer_hold_text">Do you want to take a look at our appetizer menu?</string>
     <string name="button_oh_yeah">Oh yeah!</string>
     <string name="appetizer_order_confirmation_dialog">We go your order of %s !</string>
+    <string name="button_proceed_to_checkout">Proceed to Checkout</string>
+
+    <!-- View Cart Activity -->
     <string name="button_submit_order">Submit Order</string>
 
     <!-- Pagr Dialog -->
@@ -37,5 +41,6 @@
     <string name="guest_name_holdtext">Your Name: </string>
     <string name="button_save">Save</string>
     <string name="placeholder_name_guest">Guest</string>
+    <string name="title_activity_view_cart">ViewCart</string>
 
 </resources>
